fix: legend letter-spacing

--- a/components/Fieldset/Fieldset.module.css
+++ b/components/Fieldset/Fieldset.module.css
@@ -10,6 +10,7 @@
 .legend {
   line-height: 0;
   font-size: var(--font-large);
+  letter-spacing: 0.08em;
   text-transform: uppercase;
   color: black;
   padding: 0 4px;
